--- a/neo_settings.info.yml
+++ b/neo_settings.info.yml
@@ -2,6 +2,6 @@ name: 'Neo | Settings'
 type: module
 description: 'Provides extendable module settings.'
 package: 'Neo'
-core_version_requirement: ^10.3
+core_version_requirement: ^10.3 || ^11
 dependencies:
   - neo:neo
